# gaffrie

./: .gitignore  Cargo.toml  index.html
src/: main.rs  string_finder.rs
src/tools/: entropy_plot.rs  frequency_image.rs  hex_viewer.rs  mod.rs  string_finder.rs
src/tools/format_explorer/: mod.rs
src/tools/format_explorer/formats/: elf.rs
