[package]
name = "gaffrie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
egui_extras = "0.24.2"
egui_tiles = "0.4"
eframe = { version = "0.24.1", default-features = false, features = [
  "x11",
  "glow",
] }
env_logger = "0.10"
log = "0.4"
rfd = "0.12"
