[package]
name = "gaffrie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
egui_extras = "0.24.2"
egui_tiles = { git = "https://github.com/rerun-io/egui_tiles", branch = "emilk/improve-make_active" }
eframe = { version = "0.24.1", default-features = false, features = [
  "x11",
  "glow",
] }
log = "0.4"
rfd = "0.12"
strsim = "0.10"
egui_plot = "0.24.1"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
