[package]
name = "gaffrie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25"
egui_extras = "0.25"
egui_tiles = { version = "0.6" }
eframe = { version = "0.25", default-features = false, features = [
  "wgpu",
  "x11",
] }
log = "0.4"
rfd = "0.12"
strsim = "0.11"
egui_plot = "0.25"
nom = "7.1"

memmap2 = "0.9.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
